--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 
 <html>
     <head>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<META HTTP-EQUIV="Refresh" CONTENT="3; URL=purple.html">
-	
-	<link rel="stylesheet" type="text/css" href="http://www.purple.com/index.css">
-	
-	
-	<title>purple.com</title>
+	<title>New Tab</title>
 
 	
 	<style>
@@ -23,10 +16,5 @@ a:active { color:#666600; }
 	
     </head>
     <body>
-	<ul>
-  <li> <a href="faq.html">FAQ</a></li>
-  <li>&nbsp;</li>
-  <li> <a href="advertise.html">Your ad here</a></li>
-</ul>
     </body>
 </html>
