--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,9 @@
 		<script src="popup.js"></script>
 	</head>
 	<body>
-		<h1>purple</h1>
-		<button id="checkPage">Check it out</button>
+		<button id="checkPage">FAQ</button>
+		<style>
+	    body { background-color: #7D26CD; }
+	    </style>
 	</body>
 </html>
