--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,19 @@
 		<script src="popup.js"></script>
 	</head>
 	<body>
-		<button id="checkPage">FAQ</button>
+		<div><a href="http://www.purple.com/">purple.com</a></div>
+		<br>
+		<br>
+		<div><button id="checkPage">FAQ</button></div>
+		
 		<style>
-	    body { background-color: #7D26CD; }
-	    </style>
+		    body { background-color: #7D26CD; }
+			a{ color:#AAAA00; text-decoration: none; padding: 4px; }
+			a:link { color:#AAAA00; }
+			a:visited { color:#999900; }
+			a:hover { color:#660000; background: #9D46DD; }
+			a:active { color:#666600; }
+		</style>
+
 	</body>
 </html>
