--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
 	
 	<title>New Tab</title>
 
-	
-	<style>
-	    body { background-color: #7D26CD; }
-a{ color:#AAAA00; text-decoration: none; padding: 4px; }
-a:link { color:#AAAA00; }
-a:visited { color:#999900; }
-a:hover { color:#660000; background: #9D46DD; }
-a:active { color:#666600; }
-	</style>
+	<link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 	
     </head>
     <body>
