Make sure link opens in new tab

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 		<title>Purple</title>
 	</head>
 	<body>
-		<div><a href="http://www.purple.com/">purple.com</a></div>
+		<div><a href="http://www.purple.com/" target="_blank">purple.com</a></div>
 		
 		<style>
 		    body { background-color: #7D26CD; }
